# Research

./: .gitignore  ALIGNMENT_PLAN.md  ARCHITECTURE_MAP.md  CHANGES_SUMMARY.md  CLAUDE.md  CLAUDE2.md  CODE_CHANGES_SUMMARY.md  COMPLETE_FIX_SUMMARY.md  COMPREHENSIVE_PIPELINE_REVIEW.md  CONFIG_ERROR_HANDLING_SUMMARY.md  DATA_LOSS_ANALYSIS.md  DELIVERABLES_SUMMARY.txt  ENSEMBLE_VALIDATION_SUMMARY.md  EXAMPLE_ERROR_MESSAGES.md  FIXES_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPROVED_MESSAGES.md  INTEGRATION_FIXES_SUMMARY.md  INTEGRITY_VERIFICATION_REPORT.md  LABELING_PIPELINE_COMPLETE.md  LABEL_DISTRIBUTION_BUG_FIX.md  LICENSE  MANIFEST.in  ML_PIPELINE_ANALYSIS.md  ML_PIPELINE_AUDIT_REPORT.md  MODEL_INTEGRATION_GUIDE.md  MTF_IMPLEMENTATION_ROADMAP.md  NOTEBOOK_GUIDE.md  PHASE11_VERIFICATION_REPORT.md  PHASE1_IMPROVEMENTS.md  PHASE1_LABELING_ISSUE.md  PHASE1_MODULES_SUMMARY.md  PHASE_2_Training_Base_Models.md  PHASE_4_Train_Ensemble_Meta_Learner.md  PHASE_5_Full_Integration_Final_Test.md  PIPELINE_GAP_ANALYSIS.md  PIPELINE_MERGE_SUMMARY.md  PIPELINE_READY.md  PIPELINE_STATUS.md  PIPELINE_VERIFICATION_REPORT.md  (+30 more)
.dvc/: config
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.serena/: .gitignore  project.yml
.verification_reports/: per_model_feature_selection_consistency_report.md
OLD DOCS/: CODE_QUALITY_REPORT.md  DOCUMENTATION_FIXES_SUMMARY.md  FEATURE_SELECTION_RESEARCH.md  MASTER_GAPS_SYNTHESIS.md
Xjacob's folder don't worry about it X/: FEATURE_SELECTION_GUIDE.md  REVIEW_FOR_JACOB_FEATURE SELECTION.MD
colab_notebooks/: 01_data_pipeline.ipynb  02_train_tabular.ipynb  ML_Factory_Complete.ipynb  README.md
config/: INDEX.md  README.md  cv.yaml  scaling_stats.json  training.yaml
docs/: ALIGNMENT_PLAN.md  ARCHITECTURE.md  COLAB_GUIDE.md  CURRENT_VS_INTENDED_ARCHITECTURE.md  DOCUMENTATION_CLEANUP_SUMMARY.md  FINAL_DOCUMENTATION_AUDIT.md  INDEX.md  LOOKAHEAD_PREVENTION_GUIDE.md  MIGRATION.md  MIGRATION_GUIDE.md  ML_Pipeline_Notebook_Reference.md  PHASE1_MASTER_DOCUMENTATION.md  QUANTITATIVE_TRADING_ANALYSIS.md  QUICK_REFERENCE.md  README.md  VALIDATION_CHECKLIST.md  WORKFLOW_BEST_PRACTICES.md
notebooks/: 01_quickstart.ipynb  02_train_all_models.ipynb  03_cross_validation.ipynb  ML_Pipeline.ipynb  Phase1_Pipeline_Colab.ipynb  colab_pipeline.ipynb  colab_setup.py  full_pipeline_trainer.ipynb
phase1/: README.md
reports/: phase1_summary.html  phase1_summary.json  phase1_summary.md
results/: PHASE1_COMPLETION_REPORT.md  PHASE1_COMPLETION_REPORT_20251218_231108.md  PHASE1_COMPLETION_REPORT_test_run_final.md  PHASE1_COMPLIANCE_CHECKLIST.md  PHASE1_COMPREHENSIVE_ANALYSIS_REPORT.md  PIPELINE_DATA_FLOW_DIAGRAM.md  README.md  SPLITTING_PACKAGING_ALIGNMENT_REPORT.md  barrier_analysis.json  feature_selection_fixed_20251220_081016.json  feature_selection_fixed_20251220_085316.json  feature_selection_report.json  feature_selection_test_run_final.json  feature_selection_test_run_full_5.json  labeling_report.md  phase1_fixes_applied.md  phase1_fixes_report_20251220_080506.json  phase1_fixes_report_20251220_081016.json  phase1_fixes_report_20251220_085120.json  phase1_fixes_report_20251220_085316.json  phase1_quantitative_analysis_report.md  validation_report.json  validation_report_fixed_20251220_080244.json  validation_report_fixed_20251220_080506.json  validation_report_fixed_20251220_081016.json  validation_report_fixed_20251220_085120.json  (+6 more)
scripts/: run_cv.py  (+18 more)
(+806 files in other folders)
