[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ensemble-price-prediction"
version = "0.1.0"
description = "Ensemble ML pipeline for financial price prediction using triple-barrier labeling"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Research Team"}
]
keywords = ["machine-learning", "finance", "trading", "ensemble", "price-prediction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Data Processing
    "pandas>=1.5.0",
    "numpy>=1.22.0",
    "scipy>=1.9.0",
    "numba>=0.56.0",

    # Visualization
    "matplotlib>=3.5.0",

    # CLI and Progress
    "tqdm>=4.64.0",
    "typer>=0.9.0",
    "rich>=13.0.0",

    # Data Storage
    "pyarrow>=10.0.0",

    # Signal Processing
    "PyWavelets>=1.4.0",

    # ML Core
    "scikit-learn>=1.2.0",
    "joblib>=1.2.0",

    # Hyperparameter Optimization
    "optuna>=3.4.0",

    # Configuration
    "PyYAML>=6.0",

    # Boosting Models
    "xgboost>=1.7.0",
    "lightgbm>=3.3.0",
    "catboost>=1.1.0",

    # Neural Network Models
    "torch>=2.0.0",

    # Timezone Support
    "pytz>=2022.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
ensemble-pipeline = "src.pipeline_cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/ensemble-price-prediction"
Documentation = "https://github.com/yourusername/ensemble-price-prediction/docs"
Repository = "https://github.com/yourusername/ensemble-price-prediction"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    ".venv",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
